# ProductRadar

./: .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  AGENT_USAGE.md  ALGORITHM_SUMMARY.md  ALTERNATIVE_PLAN.md  CONTRIBUTING.md  CURRENT_STATUS.md  Code from Airtop.txt  DATA_EXTRACTION_GUIDE.md  HANDOFF_MESSAGE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LLM_VS_PARSER_ANALYSIS.md  MCP_SETUP.md  METRICS_EXTRACTION_ALGORITHM.md  MVP_BRAINSTORM_RESULTS.md  Makefile  PROGRESS.md  PROJECT_INFO.md  PROJECT_RULES.md  QUICK_START.md  README.md  ROADMAP.md  ROLLBACK_REPORT.md  SETUP.md  TECHNICAL_PLAN.md  TODO.md  TZ_DETAILED.md  VIDEO_CARDS_STRUCTURE.md  WORK_SESSION_SUMMARY_2025-11-15.md  _push_to_git.py  analyze_html_dump.py  cursor_.md  example_adsearch_page.html  example_of_product_page.html  find_elements_in_html.py  push.bat  pyproject.toml  (+9 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
config/: .gitkeep  README.md
docs/: html_structure_reference.md
html_dumps/: ad_search_20251112_214108.html  ad_search_20251112_221659.html  ad_search_20251113_110829.html  ad_search_20251113_130447.html  ad_search_20251113_133141.html  ad_search_20251113_134126.html
research/: ARCHITECTURE_OVERVIEW.md  DEEP_DIVE_RESEARCH.md  GPT_RESEARCH_PROMPT.md  MVP_BRAINSTORM_RESULTS.md  PIPIADS_VS_ALTERNATIVES.md  QUICK_START_GUIDE.md  README.md  SSR_метод_для_отбора_товаров.md  TECHNICAL_ROADMAP_MVP.md
scripts/: run_agent.py
src/: __init__.py  browser_manager.py  config.py  logger.py  parser_engine.py  sheets_writer.py  validator.py
tests/: test_base_agent.py
(+19 files in other folders)
